--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
       </header>
       <nav>
-        <button id="merchants-nav" class="active-nav">
+        <button id="merchants-nav" class="active-nav active-bubble">
           <h2>Merchants</h2>
         </button>
         <button id="items-nav">
