--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <button id="submit-item" class="submit">Submit</button>
         </form>
       </section>
-      <section id="merchants-view" class="view">
+      <section id="merchants-view" class="view fade-in">
           <!-- Data will be displayed here -->
         </section>
         <section id="items-view" class="view hidden">
