Added metric section in the CSS code

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </nav>
     </aside>
     <main>
+      <section id="display-metrics"> </section>
       <section class="display-options">
         <h3>Showing: <span id="showing-text">All Merchants</span></h3>
         <button id="add-new-button" class="add-new-button" data-state="merchant">+ Add New</button>
